--- a/package.json
+++ b/package.json
@@ -14,19 +14,25 @@
     "email": "maverik.minett@gmail.com"
   },
   "license": "MIT",
-  "es2020": "./esm2020/index.js",
-  "es2015": "./esm2015/index.js",
+  "es2020": "./es2020/index.js",
   "exports": {
     "./package.json": {
       "default": "./package.json"
     },
     ".": {
       "es2020": "./es2020/index.js",
-      "es2015": "./es2015/index.js",
       "node": "./cjs/index.js",
       "default": "./es2020/index.js",
       "require": "./cjs/index.js",
       "import": "./es2020/index.js"
+    },
+    "./util": {
+      "types": "./util/index.d.ts",
+      "es2020": "./util/es2020/index.js",
+      "node": "./util/cjs/index.js",
+      "default": "./util/es2020/index.js",
+      "require": "./util/cjs/index.js",
+      "import": "./util/es2020/index.js"
     }
   }
 }
