--- a/tsconfig.lib.util.cjs.json
+++ b/tsconfig.lib.util.cjs.json
@@ -1,5 +1,5 @@
 {
-    "extends": "./tsconfig.lib.json",
+    "extends": "./tsconfig.lib.util.json",
     "compilerOptions": {
       "module": "CommonJS"
     }
