--- a/tsconfig.lib.main.es2020.json
+++ b/tsconfig.lib.main.es2020.json
@@ -1,5 +1,5 @@
 {
-    "extends": "./tsconfig.lib.json",
+    "extends": "./tsconfig.lib.main.json",
     "compilerOptions": {
       "target": "es2020",
       "module": "es2020",
