Revert "split library"
This reverts commit 68e2e0bc582e0359a79c999b870da32209eb6a20.

--- a/tsconfig.cjs.json
+++ b/tsconfig.cjs.json
@@ -1,5 +1,5 @@
 {
-    "extends": "./tsconfig.lib.util.json",
+    "extends": "./tsconfig.lib.json",
     "compilerOptions": {
       "module": "CommonJS"
     }
