--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,10 +7,7 @@
   "include": [],
   "references": [
     {
-      "path": "./tsconfig.lib.main.json"
-    },
-    {
-      "path": "./tsconfig.lib.util.json"
+      "path": "./tsconfig.lib.json"
     },
     {
       "path": "./tsconfig.spec.json"
