--- a/.github/workflows/validate-merge-request.yml
+++ b/.github/workflows/validate-merge-request.yml
@@ -5,7 +5,10 @@ on:
 
 jobs:
   test:
+    name: Unit Tests
     runs-on: ubuntu-latest
+    env:
+      NX_CLOUD_ACCESS_TOKEN: ${{ secrets.NX_CLOUD_ACCESS_TOKEN }}
 
     steps:
       - name: Checkout agape-types (this repo)
@@ -15,9 +18,9 @@ jobs:
         id: extract_branch
         run: echo "branch=${GITHUB_HEAD_REF}" >> $GITHUB_OUTPUT
 
-      - name: Configure Git to use PAT for submodules
-        run: |
-          git config --global url."https://${{ secrets.GH_PAT }}@github.com/".insteadOf "git@github.com:"
+      # - name: Configure Git to use PAT for submodules
+      #   run: |
+      #     git config --global url."https://${{ secrets.GH_PAT }}@github.com/".insteadOf "git@github.com:"
 
       - name: Clone AgapeToolkit monorepo (with submodules)
         run: |
