--- a/.github/workflows/validate-merge-request.yml
+++ b/.github/workflows/validate-merge-request.yml
@@ -5,7 +5,10 @@ on:
 
 jobs:
   test:
+    name: Validate Merge Request - @agape/types
     runs-on: ubuntu-latest
+    env:
+      NX_CLOUD_ACCESS_TOKEN: ${{ secrets.NX_CLOUD_ACCESS_TOKEN }}
 
     steps:
       - name: Checkout agape-types (this repo)
