--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "email": "maverik.minett@gmail.com"
   },
   "license": "MIT",
+  "homepage": "https://agape.dev",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/AgapeToolkit/AgapeToolkit"
+  },
   "es2020": "./es2020/index.js",
   "exports": {
     "./package.json": {
